Prevent login name overlap in navbar

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -178,7 +178,8 @@ ul.navbar > li {
 
 ul.navbar li.home {
     background: url(../images/cbu-logo.png) 0 10px no-repeat transparent;
-    width: 350px;
+    /* width: 350px; */
+    width: 259px;
 }
 
 ul.navbar li.home img.site-beta-label {
@@ -279,7 +280,8 @@ ul.navbar div.lang-selector .dropdown a:hover {
 }
 
 ul.navbar li.news-about {
-    margin-left: 32px;
+    /* margin-left: 32px; */
+    margin-left: 10px;
     margin-right: 10px;
 }
 
